--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+base64 = "0.22.1"
+clap = { version = "4.5.26", features = ["derive"] }
+hex = "0.4.3"
+tiny-bip39 = "2.0.0"
