--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 base64 = "0.22.1"
 clap = { version = "4.5.26", features = ["derive"] }
 hex = "0.4.3"
+once_cell = "1.20.2"
+regex = "1.11.1"
 tiny-bip39 = "2.0.0"
