--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ clap = { version = "4.5.26", features = ["derive"] }
 hex = "0.4.3"
 once_cell = "1.20.2"
 regex = "1.11.1"
+thiserror = "2.0.11"
 tiny-bip39 = "2.0.0"
