added desc + lic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "seedphraser"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+description = "BIP39 secret phrase generator"
 
 [dependencies]
 base64 = "0.22.1"
