--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seedphraser"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 license = "MIT"
 description = "BIP39 secret phrase generator"
@@ -13,3 +13,4 @@ once_cell = "1.20.2"
 regex = "1.11.1"
 thiserror = "2.0.11"
 tiny-bip39 = "2.0.0"
+zeroize = { version = "1.8.1", features = ["derive"] }
